[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = { path="../redbpf-macros"}
redbpf-probes = { path="../redbpf-probes" }
memoffset = "0.6.1"


[build-dependencies]
cargo-bpf = { path="../cargo-bpf", default-features = false, features = ["bindings"] }
bpf-sys = { path="../bpf-sys"}
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "openmonitor"
path = "src/openmonitor/main.rs"
required-features = ["probes"]
